@@ -72,6 +72,13 @@
             <version>5.3.0</version>
             <scope>test</scope>
         </dependency>
+        <!--lombok dependency-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.38</version> <!-- Use the latest version -->
+            <scope>provided</scope>
+        </dependency>
         <!-- Apche POI for Excel file handling -->
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -93,8 +100,14 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>17</source> <!-- Adjust based on your Java version -->
+                    <target>17</target>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
